Fixed spacing on Home and About pages

--- a/flaskblog/static/css/Home.css
+++ b/flaskblog/static/css/Home.css
@@ -1,11 +1,11 @@
 .u-section-1 {
 	background-image: none;
-	min-height: 557px
+	/* min-height: 557px */
 }
 
 .u-section-1 .u-layout-wrap-1 {
 	width: calc(((100% - 1140px) / 2)+1140px);
-	margin: 80px auto 0 0
+	/* margin: 80px auto 0 0 */
 }
 
 #login .u-section-1 .u-layout-wrap-1 {
@@ -13,9 +13,9 @@
 	margin: 0
 }
 
-.u-section-1 .u-layout-cell-1 {
+/* .u-section-1 .u-layout-cell-1 {
 	min-height: 477px
-}
+} */
 
 .u-section-1 .u-container-layout-1 {
 	padding: 14px 0
@@ -32,7 +32,7 @@
     --animation-custom_in-opacity: 0;
     --animation-custom_in-rotate: 0;
     --animation-custom_in-scale: .3;
-    margin: 100px auto 0;
+    margin: 10em 0 0 10em;
 }
 
 #login .u-image-1 {
@@ -53,7 +53,7 @@
 }
 
 .u-section-1 .u-text-1 {
-	margin: 90px 0 0
+	margin: 8em 0 0
 }
 
 .u-section-1 .u-btn-1 {
@@ -192,7 +192,7 @@
 
 .u-section-2 {
     background-image: none;
-    padding: 4em 0;
+    /* padding: 4em 0; */
 }
 
 .u-section-blog:first-of-type {
@@ -362,7 +362,7 @@
 	width: 622px;
 	min-height: 552px;
 	height: auto;
-	margin: 60px auto 0 0
+	/* margin: 60px auto 0 0 */
 }
 
 .u-section-4 .u-container-layout-1 {
@@ -386,7 +386,7 @@
 
 .u-section-4 .u-list-1 {
 	width: 505px;
-	margin: -551px 0 59px auto
+	margin: -551px 0 0 auto
 }
 
 .u-section-4 .u-repeater-1 {
@@ -441,6 +441,9 @@
 .u-section-4 .u-text-6 {
 	font-weight: normal;
 	margin: 24px 50px 0 5px
+}
+.top-bottom-spacer {
+	padding: 3em 0;
 }
 
 @media(max-width:1199px) {
